added buffered readers and writers to communicate with bot process